--- a/app/globals.css
+++ b/app/globals.css
@@ -154,3 +154,10 @@ hr {
     }
   
   }
+
+.program-description {
+    font-size: 14px;
+    line-height: 1.4;
+    max-width: 90%;
+    word-wrap: break-word;
+}
